--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@types/node": "11.13.0",
     "@types/react": "16.8.12",
     "@types/react-dom": "16.8.3",
+    "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
-    "typescript": "3.4.2"
+    "tslint": "^5.15.0",
+    "typescript": "^3.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -26,5 +28,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {}
 }
