base style and components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,19 +10,19 @@
     ],
     "skipLibCheck": true,
     "strict": false,
-    "forceConsistentCasingInFileNames": true,
     "module": "esnext",
     "moduleResolution": "node",
     "jsx": "preserve",
-    "declaration": false,
+    "declaration": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "allowJs": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "noEmit": true,
+    "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true
+    "isolatedModules": true
   },
   "include": [
     "src"
