--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@types/react-dom": "16.8.3",
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
     "tslint": "^5.15.0",
-    "typescript": "^3.4.2"
+    "typescript": "^3.4.2",
+    "unstated": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
